--- a/package.json
+++ b/package.json
@@ -9,8 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.2",
+    "gql": "^1.1.2",
+    "iron-session": "^6.3.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "13.0.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0",
+    "underscore": "^1.13.6"
+  },
+  "devDependencies": {
+    "@types/react": "18.0.26",
+    "typescript": "4.9.3"
   }
 }
